fix(autolinkheader): no hover icon on small screens (#322)
* fix(autolinkheader): no hover icon on mobile

* fix(autolinkheader): flatten selector

--- a/packages/gatsby-theme-carbon/src/components/AutolinkHeader/AutolinkHeader.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/AutolinkHeader/AutolinkHeader.module.scss
@@ -19,8 +19,8 @@
   }
 }
 
-.header:hover {
-  .anchor {
+@include carbon--breakpoint('md') {
+  .header:hover .anchor {
     opacity: 1;
   }
 }
